# usa-health-analysis

./: README.md  analiza_zdrowia_usa.ipynb  pyproject.toml  sub_2018_2019.ipynb  sub_2021_2023.ipynb  syntetyczna_analiza.ipynb
data/: api_data_v1.ipynb  cbp_businesses.csv  census_acs_stany_2011_2023.csv  pogoda_stany_naprawione_2011_2023.csv  usa_divisions1.csv
report/: raport_zdrowie_usa.md
